# concourse-resource-rs

./: .travis.yml  Cargo.toml  Dockerfile  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
concourse-resource/: Cargo.toml
concourse-resource-derive/: Cargo.toml  README.md
concourse-resource-derive/src/: lib.rs
concourse-resource/examples/: hello_world.rs
concourse-resource/src/: internal.rs  lib.rs
concourse_resource/: all.html  derive.IntoMetadataKV.html  index.html  macro.create_resource!.html  macro.create_resource.html  sidebar-items.js  struct.BuildMetadata.html  struct.Empty.html  struct.InOutput.html  struct.OutOutput.html  trait.IntoMetadataKV.html  trait.Resource.html
concourse_resource/internal/: index.html  sidebar-items.js  struct.CheckInput.html  struct.InInput.html  struct.InOutputKV.html  struct.KV.html  struct.OutInput.html  struct.OutOutputKV.html
examples/: README.md  hello_world.rs  simple_hello_world.rs
implementors/concourse_resource/: trait.IntoMetadataKV.js
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs
src/concourse_resource/: internal.rs.html  lib.rs.html
tests/: integration_tests.rs
